--- a/content/hello-world.mdx
+++ b/content/hello-world.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Hello World!"
 summary: "This is my first post on my blog to test out how things look in markdown."
-image: "/ted.jpg"
-publishedAt: "2024-09-07"
+image: "/phipps.jpg"
+publishedAt: "2025-08-21"
 ---
 
-I'm using this post to test out how things look with Markdown syntax. Over time, I'll be posting more about my pet projects, thoughts on technology, and maybe even some fun personal stories. Oh, and my cat, Luffy, is always around to offer moral support (and occasionally walk across my keyboard).
+I'm using this post to test out how things look with Markdown syntax. Over time, I'll be posting more about my projects, thoughts on technology, and maybe even some behind the scenes looks at what I'm working on. And of course, expect some personal touches too... whether it’s highlights from campus life, cool things I’m learning, or the occasional shoutout to friends who inspire me.
 
 ## What’s This About?
 
@@ -51,4 +51,4 @@ print("Hello, world!")
 
 That’s it for this test post! Check back soon for more updates, and thanks for stopping by!
 
-– Ted
+– Connor
