--- a/content/introducing-tt4d.mdx
+++ b/content/introducing-tt4d.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Introducing TT4D – My Fullstack Lottery Playground"
-summary: "Generate winning combinations, view past results, and analyze lottery trends all in one place."
+title: "Introducing Propwise – My Real Estate Risk Analysis Tool"
+summary: "Propwise simplifies property evaluation by turning neighborhood data into clear, actionable insights."
 image: "/tt4d.png"
-publishedAt: "2025-04-21"
+publishedAt: "2025-08-21"
 ---
 
 Hey there! I'm super excited to share one of my recent side projects: **TT4D**, short for _Toto & 4D_. It’s a fullstack web application that lets you:
