projects rough draft complete

--- a/content/hello-world.mdx
+++ b/content/hello-world.mdx
@@ -9,7 +9,7 @@ I'm using this post to test out how things look with Markdown syntax. Over time,
 
 ## What’s This About?
 
-This blog will serve as a way for me to share my experiences, projects, and random thoughts with the world. For now, I’m testing the waters and making sure everything looks good. Stay tuned for more meaningful content soon..
+This blog will serve as a way for me to share my experiences, projects, and random thoughts with the world. For now, I’m testing the waters and making sure everything looks good. Stay tuned for more meaningful content soon.
 
 ## Testing Markdown Features
 
