AI chatbot created

--- a/content/making-tvta.mdx
+++ b/content/making-tvta.mdx
@@ -54,10 +54,10 @@ There are always ways to improve, and here are a few future plans:
 
 ## See It in Action
 
-Check out the project on my [GitHub repo](https://github.com/tedawf/tradingview-telegram-alerts) for the source code and setup instructions.
+Check out the project on my [GitHub repo](https://github.com/hyattc1/computer-vision-raycaster) for the source code and setup instructions.
 
 ---
 
 This project has been a rewarding challenge, and I’m excited to continue improving it. If you have any feedback or suggestions, feel free to reach out!
 
-– Ted
+– Connor
