Chatbot further trained

--- a/content/introducing-propwise.mdx
+++ b/content/introducing-propwise.mdx
@@ -2,7 +2,7 @@
 title: "Introducing Propwise – My Real Estate Risk Analysis Tool"
 summary: "Propwise simplifies property evaluation by turning neighborhood data into clear, actionable insights."
 image: "/real-estate.jpg"
-publishedAt: "2025-08-21"
+publishedAt: "2025-08-25"
 ---
 
 Hey there! I'm super excited to share one of my recent side projects: **Propwise**, a real estate risk analysis tool. It's a web application that helps investors make informed decisions by analyzing neighborhood data and market trends.
@@ -26,7 +26,7 @@ The goal is to simplify the complex process of property evaluation by providing 
 
 This was a fullstack build, powered by:
 
-- **JavaScript** + **HTML** + **CSS** for the frontend
+- **HTML** + **CSS** + **JavaScript** for the frontend
 - **Chrome Extension API** for browser integration
 - **Real estate APIs** for market data
 - **Data visualization** for clear insights
