--- a/content/rubiks-cubes-and-leetcode.mdx
+++ b/content/rubiks-cubes-and-leetcode.mdx
@@ -12,27 +12,84 @@ As someone who's gone spent a decade solving Rubik's Cubes before ever opening L
 
 ## 🔨 Breaking Down the Impossible
 
-Trying to solve a Rubik's cube for the first time is as humbling as it gets. I remember being a toddler messing with one in my grandma's house, unable to complete even one side of it. You might keep twisting hoping for a lucky break, but with over 43 quintillion possible states, brute force won't help. That's the same feeling I've had staring at a new kind of coding problem: overwhelming at first glance, but manageable once you break it down and learn the necessary algorithm. In cubing, you don't memorize every solution — you learn patterns that can be reused across situations. Programming is the same: once you recognize a problem type, you pull out a proven approach and adapt it.
-
-<div className="mt-6 flex items-center justify-between">
-  <div className="flex-1 pr-4">
-    Here's a systematic approach in that illustrates how to find these programming patterns.
-  </div>
-  <div className="flex-shrink-0">
-    <a href="/leetcode.pdf" target="_blank" className="inline-flex items-center px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors text-sm font-medium">
-      📄  Pattern Recognition Cheat Sheet
-    </a>
-  </div>
-</div>
+Trying to solve a Rubik's cube for the first time is as humbling as it gets. I remember being a toddler messing with one in my grandma's house, unable to complete even one side of it. You might keep twisting hoping for a lucky break, but with over 43 quintillion possible states, brute force won't help. A new coding problem hits the same way: overwhelming at first glance, but manageable once you split it into steps and use the right algorithm. In cubing, you don't memorize every solution — you learn patterns that can be reused across situations. Programming is the same: once you recognize a problem type, you pull out a proven approach and adapt it.
 
 
 ## 🧩 Pattern Recognition
 
 Both Rubik's cubes and LeetCode problems center around **pattern recognition**. 
 
-In speedcubing, you learn to recognize specific cube states and apply the corresponding algorithms. For example, when you see a "corner piece" that needs to be moved to the top layer, you immediately know to execute the "right trigger" algorithm (R U R' U'). Similarly, in LeetCode, you learn to identify problem patterns like "two pointers," "sliding window," or "dynamic programming" and apply the appropriate solution template.
+In speedcubing, you learn to recognize specific cube states and apply the corresponding algorithms. Here are some beginner level examples which are used in solving the last layer:
 
-The key insight is that both activities train your brain to quickly categorize problems and retrieve the right "algorithm" from your mental library.
+<table className="w-full my-6" style={{ borderCollapse: 'collapse', border: '2px solid #374151' }}>
+  <tbody>
+    <tr style={{ borderBottom: '2px solid #374151', height: '120px' }}>
+      <td className="w-32" style={{ borderRight: '2px solid #374151', textAlign: 'center', padding: '16px', verticalAlign: 'middle' }}>
+        <img 
+          src="/sune.png" 
+          alt="Sune case"
+          className="rounded"
+          style={{ width: '80px', height: '80px', objectFit: 'cover', display: 'block', margin: '0 auto' }}
+        />
+      </td>
+      <td style={{ padding: '16px 16px 16px 32px', verticalAlign: 'middle' }}>
+        <h3 className="text-lg font-semibold m-0">Sune</h3>
+        <p className="text-sm text-gray-600 m-0">R U R' U R U2 R'</p>
+      </td>
+    </tr>
+    <tr style={{ borderBottom: '2px solid #374151', height: '120px' }}>
+      <td className="w-32" style={{ borderRight: '2px solid #374151', textAlign: 'center', padding: '16px', verticalAlign: 'middle' }}>
+        <img 
+          src="/pi.png" 
+          alt="Pi case"
+          className="rounded"
+          style={{ width: '80px', height: '80px', objectFit: 'cover', display: 'block', margin: '0 auto' }}
+        />
+      </td>
+      <td style={{ padding: '16px 16px 16px 32px', verticalAlign: 'middle' }}>
+        <h3 className="text-lg font-semibold m-0">Pi</h3>
+        <p className="text-sm text-gray-600 m-0">R U2 R' U' R U' R'</p>
+      </td>
+    </tr>
+    <tr style={{ height: '120px' }}>
+      <td className="w-32" style={{ borderRight: '2px solid #374151', textAlign: 'center', padding: '16px', verticalAlign: 'middle' }}>
+        <img 
+          src="/headlights.png" 
+          alt="Headlights case"
+          className="rounded"
+          style={{ width: '80px', height: '80px', objectFit: 'cover', display: 'block', margin: '0 auto' }}
+        />
+      </td>
+      <td style={{ padding: '16px 16px 16px 32px', verticalAlign: 'middle' }}>
+        <h3 className="text-lg font-semibold m-0">Headlights</h3>
+        <p className="text-sm text-gray-600 m-0">R U R' U' R' F R F'</p>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+In LeetCode, it’s also about seeing patterns: two pointers, sliding window, dynamic programming. Once you know the type, you can grab the right approach.
+The key insight is that both activities train your brain to quickly categorize problems and grab the right algorithm that fits.
+
+<div className="mt-6 flex items-center justify-between">
+  <div className="flex-1 pr-4">
+    Here's a systematic approach that illustrates how to recognize common coding patterns.
+  </div>
+  <div className="flex-shrink-0">
+    <a href="/leetcode.pdf" target="_blank" className="inline-flex items-center px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors text-sm font-medium">
+      📄 LeetCode Cheat Sheet
+    </a>
+  </div>
+</div>
+
+## ⚡ Muscle Memory
+
+Speedcubers develop muscle memory for algorithms - their fingers move automatically when they recognize a pattern. Similarly, experienced programmers develop "code memory" where they can quickly implement common patterns without thinking about the syntax.
+
+Both skills require:
+- **Repetition** to build familiarity
+- **Practice** to maintain speed
+- **Drilling patterns** until recognition becomes instant
 
 ## 🔄 Algorithmic Thinking
 
@@ -52,15 +109,6 @@ Both activities require breaking down complex problems into smaller, manageable 
 
 The step-by-step methodology is nearly identical!
 
-## ⚡ Muscle Memory vs. Code Memory
-
-Speedcubers develop muscle memory for algorithms - their fingers move automatically when they recognize a pattern. Similarly, experienced programmers develop "code memory" where they can quickly implement common patterns without thinking about the syntax.
-
-Both skills require:
-- **Repetition** to build familiarity
-- **Practice** to maintain speed
-- **Pattern drilling** to recognize variations quickly
-
 ## 🎯 Optimization Mindset
 
 Both activities reward optimization:
@@ -70,52 +118,11 @@ Both activities reward optimization:
 
 The optimization mindset transfers directly between the two domains.
 
-## 🧠 Mental Models
-
-### State Space Search
-Both involve navigating through a state space:
-- **Cube**: Moving from scrambled state to solved state
-- **LeetCode**: Moving from problem state to solution state
-
-### Lookahead
-- **Cube**: Planning the next few moves while executing current ones
-- **LeetCode**: Thinking about edge cases and potential optimizations while coding
-
-### Problem Decomposition
-- **Cube**: Breaking the solve into distinct phases
-- **LeetCode**: Breaking complex problems into smaller subproblems
-
-## 📚 Learning Progression
-
-The learning curves are remarkably similar:
-
-1. **Beginner**: Learn basic algorithms/patterns
-2. **Intermediate**: Practice recognition and execution speed
-3. **Advanced**: Optimize, learn advanced techniques, and compete
-4. **Expert**: Contribute to the community, teach others, and innovate
-
-## 🏆 Competitive Aspects
-
-Both have competitive elements that drive improvement:
-- **Timing** your solves/solutions
-- **Rankings** and leaderboards
-- **Community** challenges and discussions
-- **Personal records** and milestones
-
-## 💡 Transferable Skills
-
-The skills developed in one area directly benefit the other:
-
-- **Pattern recognition** improves problem categorization
-- **Algorithmic thinking** enhances solution design
-- **Optimization skills** lead to better performance
-- **Practice discipline** builds consistent improvement habits
-
 ## 🎲 The "Aha!" Moment
 
 Both activities provide that satisfying "aha!" moment when:
-- You finally recognize a complex pattern
-- The solution clicks into place
+- You swiftly pick up on a complex pattern
+- Clearing 100% test coverage, or all matching pieces
 - You achieve a personal best time
 - You solve a problem you've been stuck on
 
