Rubik's cube blog draft 3

--- a/content/rubiks-cubes-and-leetcode.mdx
+++ b/content/rubiks-cubes-and-leetcode.mdx
@@ -91,61 +91,32 @@ Both skills require:
 - **Practice** to maintain speed
 - **Drilling patterns** until recognition becomes instant
 
-## 🔄 Algorithmic Thinking
-
-Both activities require breaking down complex problems into smaller, manageable steps:
-
-### Rubik's Cube Approach
-1. **Cross** - Solve the white cross
-2. **F2L** - First two layers
-3. **OLL** - Orient last layer
-4. **PLL** - Permute last layer
-
-### LeetCode Approach
-1. **Understand** the problem
-2. **Identify** the pattern/algorithm
-3. **Implement** the solution
-4. **Optimize** for edge cases
-
-The step-by-step methodology is nearly identical!
-
 ## 🎯 Optimization Mindset
 
-Both activities reward optimization:
+In both cubing and coding, solving is only the beginning; the real challenge is chasing a better, more efficient solution.
 
-- **Rubik's Cube**: Finding the most efficient solution path, reducing move count
-- **LeetCode**: Optimizing time and space complexity, finding the most elegant solution
+- **Rubik's Cube**: At first, finishing in a few minutes feels like success. But speedcubers aim to shave off moves by swapping beginner methods with with advanced algorithms, while chasing solves where every second counts.
+- **LeetCode**: It’s easy to write a naive solution that runs in quadratic or worse time and works fine on small test cases. Instead, leveraging smarter data structures like heaps, tries, or hash maps to refining your approach can cut both runtime and memory.
 
 The optimization mindset transfers directly between the two domains.
-
-## 🎲 The "Aha!" Moment
-
-Both activities provide that satisfying "aha!" moment when:
-- You swiftly pick up on a complex pattern
-- Clearing 100% test coverage, or all matching pieces
-- You achieve a personal best time
-- You solve a problem you've been stuck on
 
 ## 🚀 Getting Started
 
 If you're interested in either activity, here are some resources:
 
 ### Rubik's Cube
-- Start with the **beginner's method**
-- Practice with a **timer app**
-- Learn **CFOP method** for speedcubing
+- Start with the **beginner's method**. YouTube tutorials are great for replaying hand movements and checking that your cube is oriented correctly.
+- Practice with a specialized cubing **timer app**, or grab a StackMat for a pro setup.
+- Learn **CFOP method** for speedcubing. It splits the solve into four digestible stages: **C**ross, **F**irst Two Layers, Last Layer **O**rientation, and Last Layer **P**ermutation.
 
 ### LeetCode
-- Begin with **easy problems**
+- Begin with **easy problems**. Focus on studying the solutions more than writing code to build an understanding of how different approaches work.
 - Focus on **one pattern** at a time
-- Use **leetcode.com** for practice
+- Use **leetcode.com** for practice. I usually aim to solve one new problem each day.
 
 ---
 
-The beauty of both Rubik's cubes and LeetCode is that they're not just about solving puzzles or coding problems - they're about developing a systematic approach to problem-solving that applies to virtually any challenge you'll face.
-
-Whether you're debugging code, optimizing algorithms, or solving complex real-world problems, the mental frameworks you develop through these activities will serve you well.
-
-*Have you tried both activities? I'd love to hear about your experiences and any other similarities you've noticed!*
+The patterns you pick up from cubing or coding don’t just stay there—they shape how you solve problems anywhere.
+Have you had a unique experience trying out either?
 
 — Connor
