--- a/content/rubiks-cubes-and-leetcode.mdx
+++ b/content/rubiks-cubes-and-leetcode.mdx
@@ -95,14 +95,14 @@ Both skills require:
 
 In both cubing and coding, solving is only the beginning; the real challenge is chasing a better, more efficient solution.
 
-- **Rubik's Cube**: At first, finishing in a few minutes feels like success. But speedcubers aim to shave off moves by swapping beginner methods with with advanced algorithms, while chasing solves where every second counts.
-- **LeetCode**: It’s easy to write a naive solution that runs in quadratic or worse time and works fine on small test cases. Instead, leveraging smarter data structures like heaps, tries, or hash maps to refining your approach can cut both runtime and memory.
+- **Rubik's Cube**: Finding the most efficient solution path, reducing move count
+- **LeetCode**: Optimizing time and space complexity, finding the most elegant solution
 
-The optimization mindset transfers directly between the two domains.
+The mindset carries over: don’t settle for a solution until it’s sharp, efficient, and resilient.
 
 ## 🚀 Getting Started
 
-If you're interested in either activity, here are some resources:
+If you're interested in either, here are some resources:
 
 ### Rubik's Cube
 - Start with the **beginner's method**. YouTube tutorials are great for replaying hand movements and checking that your cube is oriented correctly.
@@ -117,6 +117,6 @@ If you're interested in either activity, here are some resources:
 ---
 
 The patterns you pick up from cubing or coding don’t just stay there—they shape how you solve problems anywhere.
-Have you had a unique experience trying out either?
+What parallels have you seen between solving cubes and solving code?
 
 — Connor
