leetcode hyperlink added, RC D v5

--- a/content/rubiks-cubes-and-leetcode.mdx
+++ b/content/rubiks-cubes-and-leetcode.mdx
@@ -105,18 +105,17 @@ The mindset carries over: don’t settle for a solution until it’s sharp, effi
 If you're interested in either, here are some resources:
 
 ### Rubik's Cube
-- Start with the **beginner's method**. YouTube tutorials are great for replaying hand movements and checking that your cube is oriented correctly.
-- Practice with a specialized cubing **timer app**, or grab a StackMat for a pro setup.
+- Start with the **beginner's method**. YouTube tutorials are great.
+- Practice with a specialized cubing **timer app**, or grab a StackMat.
 - Learn **CFOP method** for speedcubing. It splits the solve into four digestible stages: **C**ross, **F**irst Two Layers, Last Layer **O**rientation, and Last Layer **P**ermutation.
 
 ### LeetCode
 - Begin with **easy problems**. Focus on studying the solutions more than writing code to build an understanding of how different approaches work.
 - Focus on **one pattern** at a time
-- Use **leetcode.com** for practice. I usually aim to solve one new problem each day.
+- Use **<a href="https://leetcode.com" target="_blank" rel="noopener noreferrer">leetcode.com</a>** for practice. I usually aim to solve one new problem each day.
 
 ---
 
-The patterns you pick up from cubing or coding don’t just stay there—they shape how you solve problems anywhere.
-What parallels have you seen between solving cubes and solving code?
+The problem-solving patterns from cubing and coding carry over into many parts of my life. If you’ve tried either, what lessons stuck with you?
 
 — Connor
