Rubiks cube draft v5

--- a/content/rubiks-cubes-and-leetcode.mdx
+++ b/content/rubiks-cubes-and-leetcode.mdx
@@ -1,12 +1,12 @@
 ---
 title: "What Rubik's Cubes Taught Me About LeetCode"
 summary: "How Rubik's Cubes and competitive programming train the same skills: pattern recognition, algorithms, and step by step problem solving."
-image: "/cmu3x3.jpg"
+image: "/cube.png"
 publishedAt: "2025-09-12"
 ---
 ## TL;DR
 
-As someone who's gone spent a decade solving Rubik's Cubes before ever opening LeetCode, I was surprised to see they both share the same core challenge: seemingly impossible at first, but manageable through pattern recognition and algorithmic thinking. Both require breaking a big problem into small steps and building a toolbox of repeatable patterns to reuse across similar cases.
+As someone who's spent a decade solving Rubik's Cubes before ever opening LeetCode, I was surprised to see they both share the same core challenge: seemingly impossible at first, but manageable through pattern recognition and algorithmic thinking. Both require breaking a big problem into small steps and building a toolbox of repeatable patterns to recycle across similar cases.
 
 ---
 
@@ -48,7 +48,7 @@ In speedcubing, you learn to recognize specific cube states and apply the corres
       </td>
       <td style={{ padding: '16px 16px 16px 32px', verticalAlign: 'middle' }}>
         <h3 className="text-lg font-semibold m-0">Pi</h3>
-        <p className="text-sm text-gray-600 m-0">R U2 R' U' R U' R'</p>
+        <p className="text-sm text-gray-600 m-0">R U2 R2 U' R2 U' R2 U2 R</p>
       </td>
     </tr>
     <tr style={{ height: '120px' }}>
@@ -62,7 +62,7 @@ In speedcubing, you learn to recognize specific cube states and apply the corres
       </td>
       <td style={{ padding: '16px 16px 16px 32px', verticalAlign: 'middle' }}>
         <h3 className="text-lg font-semibold m-0">Headlights</h3>
-        <p className="text-sm text-gray-600 m-0">R U R' U' R' F R F'</p>
+        <p className="text-sm text-gray-600 m-0">R2 D R' U2 R D' R' U2 R'</p>
       </td>
     </tr>
   </tbody>
