mobile touch fix and rubiks update

--- a/content/my-portfolio-is-live.mdx
+++ b/content/my-portfolio-is-live.mdx
@@ -1,6 +1,6 @@
 ---
 title: "My Portfolio is Live: Here’s What I Learned"
-summary: "From a sleek, minimal design to an integrated AI chatbot. It even got a live review from one of my favorite creators!"
+summary: "My portfolio is live, but it’s more than just a website. Building it taught me valuable lessons about balancing design, tools, and  trial and error."
 image: "/connorhyatt-com.png"
 publishedAt: "2025-08-20"
 ---
