--- a/content/rubiks-cubes-and-leetcode.mdx
+++ b/content/rubiks-cubes-and-leetcode.mdx
@@ -1,6 +1,6 @@
 ---
-title: "What Rubik's Cubes Taught Me About LeetCode"
-summary: "How Rubik's Cubes and competitive programming train the same skills: pattern recognition, algorithms, and step by step problem solving."
+title: "Rubik’s Cubes & LeetCode: An Unexpected Link"
+summary: "Both cubing and programming train the brain in patterns, algorithms, and step by step problem solving."
 image: "/cube.png"
 publishedAt: "2025-09-12"
 ---
