--- a/content/fortnite-teamwork-lessons.mdx
+++ b/content/fortnite-teamwork-lessons.mdx
@@ -2,12 +2,12 @@
 title: "What Fortnite Taught Me About Teamwork"
 summary: "How 5,000+ hours of competitive Fortnite gaming taught me valuable lessons about communication, trust, and working as part of a team."
 image: "/bugha.png"
-publishedAt: "2025-09-13"
+publishedAt: "2025-09-17"
 ---
 
 ## TL;DR
 
-Between 2018 and 2021, I logged over 5,000 hours in Fortnite. At my peak, I was among the top players in the NAE (North America East) region. Looking back, most of that time feels wasted—but not all of it. Buried in those countless matches were lessons I didn't realize I was picking up: how to work as part of a team, how to communicate under pressure, and how to trust others to cover your weaknesses.
+Between 2019 and 2021, I logged over 5,000 hours in Fortnite. At my peak, I was among the top players in the NAE (North America East) region. Looking back, most of that time feels wasted—but not all of it. Buried in those countless matches were lessons I didn’t realize I was picking up: managing pressure, adapting strategies on the fly, and combining strengths with others to reach a common goal.
 
 ---
 
@@ -18,7 +18,7 @@ To most people, Fortnite is just a popular online game where kids spam builds or
 
 But competitive Fortnite is a completely different beast, where split-second decisions decide victory or elimination. The scoreboard stretches across an entire continent, and the prize pools are massive. Bugha, who was in my lobby in the cover photo, even walked away with three million dollars from a single tournament.
 
-I devoted myself to tournaments and analysis, and that focus ended up developing skills that would later prove invaluable in professional settings.
+For years, I devoted myself to tournaments and analysis, and that focus ended up developing skills that would later prove invaluable in professional settings.
 
 ## 🗣️ Good vs Bad Communication
 
