chatbot ui update

--- a/content/fortnite-teamwork-lessons.mdx
+++ b/content/fortnite-teamwork-lessons.mdx
@@ -30,7 +30,7 @@ Even after my teammates were eliminated, they continued to provide crucial suppo
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/rV6EKKN4ndQ?vq=hd1080&quality=hd1080&autoplay=0&modestbranding=1" title="Good Fortnite Communication Example" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-In this clip, you can hear my team:
+In this clip, you can hear my team do the following:
 - **Calling out material count** - "You have 10 builds"
 - **Directing action** - Called for cover fire while I moved into position
 - **Team motivation** - A quick “Nice!” boosts confidence and energy mid-fight
@@ -60,11 +60,11 @@ This adaptability is crucial in any professional setting. Technology changes, ma
 
 ## 🧠 Mental Resilience
 
-In Fortnite, even for the best pros, you lose more often than you win. Facing constant setbacks makes competitive gaming mentally taxing as it demands quick decisions, steady focus, and emotional control under pressure.
+In Fortnite, even for the best pros, you lose more often than you win. The storm is always closing in, forcing you to act under pressure. All of this makes competitive gaming mentally demanding, requiring quick decisions, steady focus, and emotional control.
 
 When I first started, I’d get shaky in big moments and frustrated when I lost. Over time, I learned to stay collected, keep my focus, and turn mistakes into lessons.
 
-These same techniques help me stay composed during high-pressure work situations, tight deadlines, and challenging projects.
+These same techniques help me stay composed during high-stakes work situations, tight deadlines, and challenging projects.
 
 
 ---
