--- a/content/fortnite-teamwork-lessons.mdx
+++ b/content/fortnite-teamwork-lessons.mdx
@@ -13,7 +13,7 @@ Between 2019 and 2021, I logged over 5,000 hours in Fortnite. At my peak, I was 
 
 ## 🌍 More Than a Game
 
-To most people, Fortnite is just a popular online game where kids spam builds or do dance emotes. It’s a battle royale where up to 100 people drop into an island and face off until only one player or team remains.
+Most people know Fortnite as popular online battle royale game where up to 100 people drop into an island and face off until only one player or team remains.
 
 
 But competitive Fortnite is a completely different beast, where split-second decisions decide victory or elimination. The scoreboard stretches across an entire continent, and the prize pools are massive. Bugha, who was in my lobby in the cover photo, even walked away with three million dollars from a single tournament.
