--- a/content/my-portfolio-is-live.mdx
+++ b/content/my-portfolio-is-live.mdx
@@ -5,7 +5,11 @@ image: "/connorhyatt-com.png"
 publishedAt: "2025-08-20"
 ---
 
-After weeks of hard work, I’m excited to finally share my developer portfolio with the world! My goal was to create a clean, functional, and professional site that not only highlights my skills and projects but also offers a simple, user-friendly experience. In this post, I’ll walk you through the main features of the site and share a few key lessons I learned along the way.
+After weeks of hard work, I'm excited to finally share my developer portfolio with the world! My goal was to create a clean, functional, and professional site that not only highlights my skills and projects but also offers a simple, user-friendly experience. In this post, I'll walk you through the main features of the site and share a few key lessons I learned along the way.
+
+## Credits and Inspiration
+
+First and foremost, a huge shoutout to **Ang Wei Feng** ([@tedawf](https://github.com/tedawf)) for creating the original portfolio template that inspired this site! His clean, minimal implementation provided the perfect foundation for my own version. You can check out his original repository at [github.com/tedawf/tedawf.com](https://github.com/tedawf/tedawf.com){:target="_blank"}.
 
 ## Key Features
 
@@ -38,7 +42,7 @@ One of the coolest features is the **AI chatbot**, which is trained on the conte
 Maybe I'm dumb but building the portfolio wasn’t entirely free:
 
 - **Domain**: $20/year for the custom domain.
-- **OpenAI API**: $5 to power the chatbot and generate embeddings.
+- **OpenAI API**: $10 to power the chatbot and generate embeddings.
 - **Free-ish Tools**: Other services like **AstraDB** (for storing vector data), **Upstash** (for caching), and **Vercel** (for hosting) are free for now, but may incur costs if my usage increases.
 
 ## Future Plans and Enhancements
@@ -50,6 +54,6 @@ Maybe I'm dumb but building the portfolio wasn’t entirely free:
 
 ---
 
-Thanks for checking out my portfolio! I’m excited to keep improving it and learning from the process. Feel free to explore and reach out if you have any questions.
+Thanks for checking out my portfolio! I'm excited to keep improving it and learning from the process. Feel free to explore and reach out if you have any questions.
 
 — Connor
