remove invalid MDX syntax in blog post

--- a/content/my-portfolio-is-live.mdx
+++ b/content/my-portfolio-is-live.mdx
@@ -9,7 +9,7 @@ After weeks of hard work, I'm excited to finally share my developer portfolio wi
 
 ## Credits and Inspiration
 
-First and foremost, a huge shoutout to **Ang Wei Feng** ([@tedawf](https://github.com/tedawf)) for creating the original portfolio template that inspired this site! His clean, minimal implementation provided the perfect foundation for my own version. You can check out his original repository at [github.com/tedawf/tedawf.com](https://github.com/tedawf/tedawf.com){:target="_blank"}.
+First and foremost, a huge shoutout to **Ang Wei Feng** ([@tedawf](https://github.com/tedawf)) for creating the original portfolio template that inspired this site! His clean, minimal implementation provided the perfect foundation for my own version. You can check out his original repository at [github.com/tedawf/tedawf.com](https://github.com/tedawf/tedawf.com).
 
 ## Key Features
 
